@@ -5,6 +5,11 @@ Release 1.1 (in development)
 Release 1.0.1 (in development)
 ==============================
 
+* Fix building with SingleHTMLBuilder when there is no toctree.
+
+* Fix display names for objects linked to by intersphinx with
+  explicit targets.
+
 * Fix building with the JSON builder.
 
 * Fix hyperrefs in object descriptions for LaTeX.
